# routes/user.route.js
@@ -6,8 +6,8 @@ const userController = require('../controller/user.controller');
 router.get("/checkuserexists/:email", userController.checkuserexists);
 router.post("/signup", userController.signup);
 router.get("/sendemailverificationcode/:userId", userController.sendemailverificationcode);
-router.get("/resendemailverificationcode/:userId", userController.resendemailverificationcode);
-router.get("/verifyemail/:code/:user", userController.verifyemail);
+router.get("/verifyemail/:userId", userController.verifyemail);
 router.post("/login", userController.login);
+router.get("/forgetpassword/:email", userController.forgetpassword);
 
 module.exports = router;
